fixing z-index of menu

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -79,7 +79,8 @@
 	margin-right: auto;
 	margin-bottom: auto;
 	margin-top: 1px;
-	cursor: pointer;
+  cursor: pointer;
+  z-index: 2000; 
 }
 
 .dropdown {
@@ -221,4 +222,8 @@ footer.page-footer {
   background-size:100% auto;
   background-repeat: no-repeat;
 }
-
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
